// Common fully-compatible messages for both Prometheus 1 and 2.

syntax = "proto3";
package prompb;

message Label {
  string name  = 1;
  string value = 2;
}

message Sample {
  double value       = 1;
  int64 timestamp_ms = 2;
}

message TimeSeries {
  repeated Label labels   = 1; // not ordered
  repeated Sample samples = 2; // not ordered
}

message LabelMatcher {
  enum Type {
    EQ  = 0;
    NEQ = 1;
    RE  = 2;
    NRE = 3;
  }

  Type type    = 1;
  string name  = 2;
  string value = 3;
}

message Query {
  int64 start_timestamp_ms = 1;
  int64 end_timestamp_ms = 2;
  repeated LabelMatcher matchers = 3;
}

message QueryResult {
  // Samples within a time series must be ordered by time.
  repeated TimeSeries time_series = 1;
}

message ReadRequest {
  repeated Query queries = 1;
}

message ReadResponse {
  // In same order as the request's queries.
  repeated QueryResult results = 1;
}

message WriteRequest {
  repeated TimeSeries time_series = 1;
}
